# jb-test

./: .buildinfo  .gitignore  Dockerfile  _config.yml  _toc.yml  arithmetic.html  arithmetic.html.bkp  arithmetic.md  build  genindex.html  genindex.html.bkp  haskdown.html  haskdown.md  haskell-notebook.html  haskell-notebook.html.bkp  haskell-notebook.ipynb  intro.html  intro.html.bkp  intro.md  lists.html  lists.html.bkp  markdown.html  markdown.html.bkp  markdown.md  mynewbook.cabal  objects.inv  python-notebook.html  requirements.txt  search.html  searchindex.js  stack.yaml
.ipynb_checkpoints/: python-notebook-checkpoint.ipynb
.stack-work/: stack.sqlite3
.stack-work/ghci/88cdbcbb/: cabal_macros.h
_build/.doctrees/: environment.pickle  haskdown.doctree  haskell-notebook.doctree  intro.doctree  markdown.doctree  python-notebook.doctree
_build/html/: genindex.html  haskell-notebook.html  intro.html  markdown.html  python-notebook.html  search.html
_build/html/_sources/: haskdown.ipynb  markdown.md  python-notebook.ipynb
_build/jupyter_execute/: haskell-notebook.ipynb  markdown.py  python-notebook.ipynb  python-notebook.py
_sources/: arithmetic.ipynb  haskdown.ipynb  haskell-notebook.ipynb  lists.ipynb  lists.md  markdown.ipynb
