name:                mynewbook
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dylnb/jb-test
license:             BSD3
license-file:        LICENSE
author:              Dylan Bumford
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable helloworld
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
